<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="herp"
            type="com.kkarabet.herpalooza.database.Herp" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:background="@color/BGdark">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="106dp"
                android:layout_height="match_parent"
                android:background="@color/accent"
                app:imageResource="@{herp.defaultImage}"
                tools:src="@drawable/gecko" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/blank" />

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/BGdark"
                    android:text="@string/blank"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/BGdark"
                    android:text="@string/blank"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/BGdark"
                    android:text="@string/typeherp"
                    android:textColor="@color/BGLight"
                    android:textSize="20sp" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="101dp"
                android:layout_height="91dp"
                android:buttonTint="@color/white"
                android:text="@string/found"
                android:textColor="@color/BGLight"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/BGLight"
            android:text="@string/blank" />


    </LinearLayout>


</layout>